--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,10 @@
 dominate==2.5.2
-jax==0.1.77
-jaxlib==0.1.55
-matplotlib==3.3.2
-packaging==20.4
-pandas==1.1.2
-pipdeptree==1.0.0
+jax~=0.1.75
+matplotlib~=3.2.2
+pandas~=1.0.5
 plotly==4.10.0
-quadpy==0.13.2
-setuptools==49.6.0.post20200814
-tabulate==0.8.7
-wheel==0.35.1
+
+numpy~=1.18.5
+scipy~=1.5.0
+sympy~=1.6.1
+attrs~=19.3.0
