--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 dominate==2.5.2
-jax~=0.1.75
-matplotlib~=3.2.2
-pandas~=1.0.5
-plotly==4.10.0
+jax~=0.2.5
+matplotlib~=3.3.2
+pandas~=1.1.3
+plotly~=4.11.0
 
-numpy~=1.18.5
+numpy~=1.19.2
 scipy~=1.5.0
 sympy~=1.6.1
-attrs~=19.3.0
+attrs~=20.2.0
+requests~=2.24.0
+backports~=1.0
